v.6.01 (05 January 2019)
    - Minor bug fix in feedback wire detection.

v.6.00 (04 January 2019)
    - Greatly improved performance in reactive-style one-shot circuits.
    - Added Circuit::Set/GetBufferCount() for optimized stream processing.
    - Added "Series" tick mode for optimized series circuit processing.
    - Tick parallel components in parallel with new ComponentThread class.
    - Improved stability in *Thread classes.

v.5.01 (11 November 2018)
    - Various code readability improvements.
    - Wait for circuit threads to stop in StopAutoTick().

v.5.00 (10 November 2018)
    - Removed unnecessarily complex integrated circuits concept.
    - Replaced in-house DSPatch::internal::Threads with std::threads.
    - Removed all friend classes.
    - Moved signal reference counting into DSPatch::internal::Component.
    - Moved RunType logic into Signal.
    - Added Signal::HasValue() and Signal::GetType().
    - Loads of optimisations and static code analysis fixes.

v.4.10 (27 October 2018)
    - Allow out-of-order component processes.
    - Fixed threaded integrated circuit bugs.

v.4.00 (09 October 2018)
    - Major C++14 refactor.
    - Moved audio-related example components to the DSPatchables project.
    - Removed overly complex Parameter concept.
    - Removed the horrid "Global Circuit", along with DSPatch::Finalize().
    - Greatly simplified component plugins.
    - Optimised signal transfer by moving rather than copying where possible.
    - Added CI and unit tests.

v.3.00 (07 April 2015)
    - Reference parameters by index for better performance.
    - Cleaned up code formatting and class interfaces.
    - DisconnectComponent fixed to also remove outgoing wires.
    - ResumeAutoTick() resumes only once called for every PauseAutoTick().
    - Updates to support DSPatcher.

v.2.70 (21 December 2014)
    - Added support for DspComponent plugins (DspPlugin + DspPluginLoader).
    - Fixed build and install scripts.

v.2.62 (18 August 2014)