@@ -1,5 +1,6 @@
 v.6.01 (05 January 2019)
     - Minor bug fix in feedback wire detection.
+    - Rebrand DSPatch as a Dataflow Framework rather than FBP.
 
 v.6.00 (04 January 2019)
     - Greatly improved performance in reactive-style one-shot circuits.
